Upgrade to JDK 17 - Upgrades JDK versions to 17 in all workflows - Bumps version to indicate major change
Signed-off-by: Esta Nagy <nagyesta@gmail.com>